# RemoteDesk-PRO

./: CMakeLists.txt  check-nginx-ws.sh  deploy-web-https-ip.sh  deploy-web-https.sh  deploy-web.sh  file_manager.h  h264_encoder.h  host.h  host_config.json.template  index.html  main.cpp  nginx-remote-desktop.conf  process_manager.h  rdp-server.service  screen_capture.h  server.py  webrtc_stream.cpp  webrtc_stream.h  ws_client.h
.claude/: launch.json  settings.local.json
NEW_RDP_Cloud/: CMakeLists.txt  README.md  file_manager.h  index.html  process_manager.h  screen_capture.h  server.py
RemoteDesktop_P2P/AutoGPT/VPS/: relay_server.py
RemoteDesktop_P2P/NEW_RDP_Cloud/: README.md  check-nginx-ws.sh  deploy-web-https-ip.sh  deploy-web-https.sh  deploy-web.sh  h264_encoder.h  index.html  logger.h  main.cpp  nginx-remote-desktop.conf  screen_capture.h  server.py  webrtc_stream.cpp  webrtc_stream.h  ws_client.h
